portainer/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  selector:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/instance: portainer
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
#  loadBalancerIP: 192.168.0.207
